--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,8 @@ dependencies:
   meta: ^1.1.6
 
   equatable: ^1.0.3
-  google_api_availability: ^2.0.4
+  google_api_availability:
+    git: https://github.com/randomjoho/flutter-google-api-availability.git
   location_permissions: ^2.0.4+1
   vector_math: ^2.0.8
 
